--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "res:watch": "rescript build -w"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.1.0",
     "@rescript/react": "^0.10.3",
     "@viro-community/react-viro": "^2.23.0",
     "react": "18.0.0",
     "react-native": "0.69.0",
+    "react-native-compass-heading": "^1.4.1",
+    "react-native-permissions": "^3.3.1",
     "rescript-react-native": "^0.68.1"
   },
   "devDependencies": {
